[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dedup-rs"
version = "0.4.0"
description = "Rust implementation of deduplication algorithms with Python bindings"
authors = [{name = "Wayne Lau"}]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "numpy>=1.26.4",
]

[tool.maturin]
module-name = "dedup_rs"
manifest-path = "dedup-py/Cargo.toml"
